# tauri-app

./: .gitignore  README.md  _cmd  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json  mobile.json
src-tauri/capabilities.with_plugins/: desktop.json
src-tauri/src/: config.rs  lib.rs
src/routes/: +page.svelte
