[package]
name = "tauri-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
network-interface = { version = "*", features = ["serde"] }
sysinfo = { version = "*", features = ["serde"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
futures = "0.3.31"
# https://docs.rs/reqwest/latest/reqwest/#optional-features
reqwest = { version = "0.12.12", default-features = false, features = ["http2", "rustls-tls", "socks"] }
tokio = "1.43.0"
tauri-plugin-notification = "2"
#openssl = { version = "0.10", features = ["vendored"] }


[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# Mobile target
tauri = { version = "2", features = [] }
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
tauri-plugin-nfc = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Desktop target
tauri = { version = "2", features = [ "tray-icon", "unstable" ] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
